@@ -129,7 +129,14 @@ others in the same frame")
 ;;; See clfswm.lisp for hooks examples.
 
 ;;; Init hook. This hook is run just after the first root frame is created
-(defparameter *init-hook* nil)
+(defun default-init-hook ()
+  (let ((frame (add-frame (create-frame :name "Default"
+                                        :layout nil :x 0.05 :y 0.05
+                                        :w 0.9 :h 0.9) *root-frame*)))
+    (setf *current-child* (first (frame-child *current-root*)))))
+
+(defparameter *init-hook* #'default-init-hook)
+
 
 ;;; Main mode hooks (set in clfswm.lisp)
 (defparameter *button-press-hook* nil)
